# playdroid-streamer

./: README.md  meson.build
include/: display.h  gsthelper.h  input.h  playsocket.h  socket-protocol.h  wayland-window.h
src/: display.cpp  gsthelper.cpp  input.cpp  main-old.cpp  main.cpp  wayland-window.cpp
tests/: meson.build  render.h  server.cpp
